[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
lazy_static = "1.5"
smallvec = "1.13"
seq-macro = "0.3"
hashbrown = "0.15"
